--- a/app/views/pages/FAQS.html.erb
+++ b/app/views/pages/FAQS.html.erb
@@ -1,1 +1,167 @@
-FAQ's
+<div class="container">
+    <br />
+    <br />
+    <div class="panel-group" id="accordion">
+        <div class="faqHeader">General questions</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">What is early settlement discount?</a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Early settlement discount is the process by which buyers offer their suppliers early payment on invoices, in return for a small discount to the invoice value.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Why should I accept an early payment offer?</a>
+                </h4>
+            </div>
+            <div id="collapseTen" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <p>Cash is King. Companies of all sizes need cash to purchase new supplies, make payroll, fund new projects, or pay down loans. While waiting for invoices to be paid, some companies are forced to slow production or take out a loan. But not all financing options are created equal. Invoicely’s early payments mean you’ll get the cash you need at a better rate than typical financing options.</p>
+                    <p>For example, early settlement discounts through Invoicely typically sit between 8-12% APR. This compares extremely favorably versus a typical credit card with 18+% APR, a factoring company with 25+% APR, or 2/10 net 30 terms with a 36% APR. What’s more, there are no additional contracts, hidden fees or 3rd party complications and no additional debt on your balance sheet.</p> 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">How is Invoicely different from factoring?</a>
+                </h4>
+            </div>
+            <div id="collapseNine" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Invoicely provides the platform to enable early settlement discounts. Unlike factoring, this does not involve third parties, with early payment managed between the buyer and supplier. 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">What is the relationship between FatFace and Invoicely?</a>
+                </h4>
+            </div>
+            <div id="collapseSeven" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Invoicely is an independent company that specialises in managing the early settlement program for large buying organisations. We have teamed up with FatFace to manage their Q1 discount program. All offers made on the Invoicely platform come directly from FatFace. Invoicely is not involved in the payment process. 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">How much does Invoicely cost?</a>
+                </h4>
+            </div>
+            <div id="collapseEight" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Nothing. Invoicely does not charge any fee for suppliers to use the platform. 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Who processes my early payment?</a>
+                </h4>
+            </div>
+            <div id="collapseSix" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Your customer will continue to process all of your payments as usual. Invoicely manages the communication to your customer when you accept an early payment offer.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">How do I account for VAT after accepting an early payment?</a>
+                </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse">
+                <div class="panel-body">
+                    From 1st April 2015, HMRC introduced new legislation in regards to how companies should account for VAT when offering early settlement discount. This <a href="https://www.gov.uk/government/publications/revenue-and-customs-brief-49-2014-vat-prompt-payment-discounts" target="_blank">link</a> provides further information.
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="faqHeader">Using the platform</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">Where can I see early payment offers from FatFace?</a>
+                </h4>
+            </div>
+            <div id="collapseEleven" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Within your dashboard, the tab called <i>New Offers</i>&nbsp; displays all of your pending offers. 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">How do I accept or reject offers?</a>
+                </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Accepting or rejecting offers is easy. Simply choose <i>Accept</i> or <i>Reject</i>&nbsp; next to the appropriate invoice and click Submit once finished. Alternatively you can choose to accept or reject all offers by using the green or red <i>Mark All</i>&nbsp; buttons.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">When will I receive payment?</a>
+                </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse">
+                <div class="panel-body">
+                    The column labelled Proposed Settlement Date details the new payment date offered by your customer. If you accept the early payment offer, payment will be processed on this date. If you reject the early payment offer, there will be no change to the agreed settlement date.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Can I see a summary of my offers?</a>
+                </h4>
+            </div>
+            <div id="collapseFive" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Within your dashboard, the tab called Previous Offers displays all of your past offers. This includes offers that you have accepted, rejected or have expired without action. You will also receive confirmation by email summarising all your reponses. 
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">How is my information provided to Invoicely?</a>
+                </h4>
+            </div>
+            <div id="collapseTwelve" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Invoicely only has access to supplier’s basic contact and invoice information. We get this directly from your customer. We do not have access to your banking information.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">I need help, who do I contact?</a>
+                </h4>
+            </div>
+            <div id="collapseThirteen" class="panel-collapse collapse">
+                <div class="panel-body">
+                    We are here to help. Please drop us an email at <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %> and we promise to respond promptly.  
+                </div>
+            </div>
+        </div>        
+    </div>
+</div>
+<br><br>
