--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -32,7 +32,7 @@
         <th class='darkhead'><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
         <!-- <th><%#= sortable "status", "Offer Status" %></th> -->
         <th class='darkhead'><%= sortable "prop_settlement_date", "New Settlement Date" %></th>
-        <th class='darkhead'><%= sortable "offer_amount", "New Invoice Amount" %></th>
+        <th class='darkhead'><%= sortable "offer_amount", "New Settlement Amount" %></th>
         <!-- <th><%#= sortable "saving", "Money Saved" %></th> -->
       </tr>
     </thead>
@@ -108,7 +108,7 @@
      <%= will_paginate @pinsrejected, renderer: BootstrapPagination::Rails %>
     </div>
     <br>
-    <p>If you'd like a new offer on any rejected/expired invoices please get in touch: <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
+    <p>To receive a new offer on any rejected/expired invoices please get in touch: <%= mail_to 'fatface.offers@invoicely.co.uk' do %>fatface.offers@invoicely.co.uk<% end %>.</p>
   <% end %>
   <br><br><br><br>
 </div>
