--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "About", root_path %></li>
+            <li><%= link_to "About", about_path %></li>
             <li><%= link_to "FAQ's", faqs_path %></li>        
           <% if user_signed_in? %>
             <li><%= link_to "Dashboard", offersreceived_path %></li>
