--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -1,7 +1,7 @@
 <div class='ffportal'>
 
   <div class='welcometitle'>
-    <h1>Welcome <%= current_user.user_name %></h1>
+    <h1>Welcome, <%= current_user.user_name %></h1>
   </div>
   <hr style="height: 2px; background-color: grey;"></hr>
 
