--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
-@import url(https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900);
+@import url(https://fonts.googleapis.com/css?family=Maven+Pro:500,700);
+//CHECK WHICH OF THESE FONT WEIGHTS ARE NOT BEING USED THEN REMOVE!
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,900,800,700,600,500,300,200,100);
 
 $body-bg:                         #F6F5F1;
 $font-family-sans-serif:          'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -21,10 +23,6 @@ $jumbotron-bg:                    white;
 	text-align: center;
 }
 
-.navbar-brand {
-  font-weight: bold;
-}
-
 #remember_me_label{
 	padding-left: 0px;
 }
@@ -33,10 +31,91 @@ $jumbotron-bg:                    white;
 	margin-top: 20px;
 }
 
-
 .navbar {
+	font-family: 'Raleway', sans-serif;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	margin-bottom: 0px;
+	width: 100%;
+	background-image: url('backgroundimage.jpeg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	border-bottom-width: 0px;
+
+	.navbar-brand:hover,
+	.navbar-brand:active,{
+    color: #72B74C !important;
+	}
+
+	.navbar-toggle,
+	.navbar-toggle:hover,
+	.navbar-toggle:focus, {
+		border: none !important;
+		background: none;
+
+		.icon-bar{
+			background-color: white;
+    	height: 1px;
+		}
+	}
+
+	.navbar-nav > li > a {
+		color: white;
+		font-weight: 100;
+	}
+
+	.navbar-nav > li > a:hover,
+	.navbar-nav > li > a:focus, {
+		color: #72B74C;
+	}
 }
+
+.navbar-default .navbar-brand {
+  color: white !important;
+  font-size: 25px;
+ 	font-weight: 100;
+}
+
+
+html, body {
+    height: 100%;
+}
+
+.bodyofhomepage {
+	width: 100%;
+	height: 100%;
+	background-image: url('backgroundimage.jpeg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+
+	.container{
+		font-family: 'Raleway', sans-serif;
+		color: white;
+		font-weight: 100;
+
+	}
+
+	.homeTitle{
+		font-size: 100px;
+		background-color: rgba(0, 0, 0, 0.6);
+		display: inline-block;
+		padding: 0px 25px 3px 25px;
+		margin-top: 150px
+	}
+
+	.homeLine{
+		font-size: 50px;
+		background-color: rgba(0, 0, 0, 0.6);
+		display: inline-block;
+		padding: 0px 25px 3px 25px;
+		margin-top: 40px
+	}
+}
+
 
 .fatfaceheader{
 	background-color: #424242;
