--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,12 @@
+
 <nav class="navbar navbar-static-top navbar-default">
-  <div class="container">
+
+  <% if current_page?(root_path) %>
+    <div class="container" style='display: none;' id='homepageNav'>
+  <% else %>
+    <div class="container">
+  <% end %>
+
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -9,10 +16,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Invoicely", root_path, class: "navbar-brand" %>
+        <%= link_to "Invoice<span style='color: #72B74C'>ly</span>".html_safe, root_path, class: "navbar-brand" %>
       </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- Collect the nav links, forms, and other content for toggling -->
         <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "FAQ's", faqs_path %></li>        
@@ -30,3 +37,12 @@
   </div><!-- /.container -->
 </nav>
 
+
+
+<!-- style='display: none;' id='homepageNav' -->
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#homepageNav').delay(0).fadeIn(4000);
+});
+</script> 
