--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,16 @@
     <%= render 'layouts/supplierheader' %>
   <% end %>
 
-	<div class="container">
-    <% flash.each do |name, msg| %>
-    	<%= content_tag(:div, msg, class: "alert alert-info") %>
-    <% end %>
-		<%= yield %>
-	</div>
-
+  <% if current_page?(root_path) %>
+    <div class='bodyofhomepage'>
+  <% else %>
+    <div class="container">
+  <% end %>
+      <% flash.each do |name, msg| %>
+      	<%= content_tag(:div, msg, class: "alert alert-info") %>
+      <% end %>
+  		<%= yield %>
+  	</div>
 </body>
 </html>
 
