--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,3 @@
-<div class="jumbotron center">
-	<h1>Welcome to Invoicely!</h1>
-</div>
-
-
-
-
-
-
-
-
 <!-- 	<%# if user_signed_in? %>
 	<% #else %>
 		<p>
@@ -19,3 +8,11 @@
 
 
 
+<div class='container'>
+	<div class='homeTitle'>
+		Invoice<span style="color: #72B74C">ly</span>
+	</div>
+		<div class='homeLine'>
+		Unlocking the power of <span style="color: #72B74C">y</span>our accounts paya<span style="color: #72B74C">ble.</span>
+	</div>
+</div
