--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -37,7 +37,7 @@ $jumbotron-bg:                    white;
 	padding-bottom: 10px;
 	margin-bottom: 0px;
 	width: 100%;
-	background-image: url('app/assets/images/backgroundimage.jpeg');
+	background-image: url('images/backgroundimage.jpeg');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
