--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,6 @@
 		Invoice<span style="color: #72B74C">ly</span>
 	</div>
 		<div class='homeLine'>
-		Unlocking the power of <span style="color: #72B74C">y</span>our accounts paya<span style="color: #72B74C">ble.</span>
+		Unlocking the power of <span style="color: #72B74C">y</span>our accounts payab<span style="color: #72B74C">le.</span>
 	</div>
 </div
