--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -114,6 +114,18 @@ html, body {
 		padding: 0px 25px 3px 25px;
 		margin-top: 40px
 	}
+
+	.homeText{
+		font-size: 23px;
+		background-color: rgba(0, 0, 0, 0.6);
+		display: inline-block;
+		padding: 25px 25px 25px 25px;
+		margin-top: 40px;
+
+		a {
+			color: #72B74C;
+		}
+	}
 }
 
 
