--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-static-top navbar-default">
 
   <% if current_page?(root_path) %>
-    <div class="container" style='display: none;' id='homepageNav'>
+    <div class="container" id='homepageNav'>
   <% else %>
     <div class="container">
   <% end %>
@@ -42,7 +42,7 @@
 <!-- style='display: none;' id='homepageNav' -->
 
 <script type="text/javascript">
-$(document).ready(function() {
-    $('#homepageNav').delay(0).fadeIn(4000);
-});
+// $(document).ready(function() {
+//     $('#homepageNav').delay(0).fadeIn(4000);
+// });
 </script> 
