--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= render 'layouts/supplierheader' %>
   <% end %>
 
-  <% if current_page?(root_path) or  current_page?(about_path) %>
+  <% if current_page?(root_path) or  current_page?(about_path) or current_page?(faqs_path) %>
     <div class='bodyofhomepage'>
   <% else %>
     <div class="container">
