--- a/app/views/pages/FAQS.html.erb
+++ b/app/views/pages/FAQS.html.erb
@@ -2,7 +2,8 @@
     <br />
     <br />
     <div class="panel-group" id="accordion">
-        <div class="faqHeader">General questions</div>
+        <div class='homeLine'>General questions</div>
+        <br><br><br>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -89,7 +90,8 @@
             </div>
         </div>
         <br>
-        <div class="faqHeader">Using the platform</div>
+        <div class='homeLine'>Using the platform</div>
+        <br><br><br>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
