--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -85,7 +85,8 @@ html, body {
 
 .bodyofhomepage {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+	//height: 100%;
 	background-image: url('images/backgroundimage.jpeg');
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -101,7 +102,7 @@ html, body {
 
 	.homeTitle{
 		font-size: 100px;
-		background-color: rgba(0, 0, 0, 0.6);
+		background-color: rgba(0, 0, 0, 0.5);
 		display: inline-block;
 		padding: 0px 25px 3px 25px;
 		margin-top: 150px
@@ -109,7 +110,7 @@ html, body {
 
 	.homeLine{
 		font-size: 50px;
-		background-color: rgba(0, 0, 0, 0.6);
+		background-color: rgba(0, 0, 0, 0.5);
 		display: inline-block;
 		padding: 0px 25px 3px 25px;
 		margin-top: 40px
@@ -117,7 +118,7 @@ html, body {
 
 	.homeText{
 		font-size: 23px;
-		background-color: rgba(0, 0, 0, 0.6);
+		background-color: rgba(0, 0, 0, 0.5);
 		display: inline-block;
 		padding: 25px 25px 25px 25px;
 		margin-top: 40px;
