--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -86,7 +86,6 @@ html, body {
 .bodyofhomepage {
 	width: 100%;
 	min-height: 100%;
-	//height: 100%;
 	background-image: url('images/backgroundimage.jpeg');
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -102,7 +101,7 @@ html, body {
 
 	.homeTitle{
 		font-size: 100px;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgba(0, 0, 0, 0.55);
 		display: inline-block;
 		padding: 0px 25px 3px 25px;
 		margin-top: 150px
@@ -110,7 +109,7 @@ html, body {
 
 	.homeLine{
 		font-size: 50px;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgba(0, 0, 0, 0.55);
 		display: inline-block;
 		padding: 0px 25px 3px 25px;
 		margin-top: 40px
@@ -118,12 +117,47 @@ html, body {
 
 	.homeText{
 		font-size: 23px;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgba(0, 0, 0, 0.55);
 		display: inline-block;
 		padding: 25px 25px 25px 25px;
 		margin-top: 40px;
-
 		a {
+			color: #72B74C;
+		}
+	}
+
+	.panel-default{
+		background-color: transparent;
+		border: none;
+	}
+
+	.panel-heading{
+		background-color: transparent;
+	}
+
+	.panel-title{
+		font-weight: 100;
+		font-size: 20px;
+		color: white;
+		background-color: transparent;
+		a:hover{
+			color: #72B74C;
+			text-decoration: none;
+		}
+		a:focus {
+			color: white;
+			text-decoration: none;
+			background-color: rgba(0, 0, 0, 0.55);
+			padding: 7px 25px 7px 25px;
+		}
+	}
+
+	.panel-body{
+		font-size: 18px;
+		background-color: rgba(0, 0, 0, 0.55);
+		padding: 7px 25px 7px 25px;
+		margin-left: 15px;
+				a {
 			color: #72B74C;
 		}
 	}
