--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -119,7 +119,7 @@ html, body {
 			font-size: 80px !important;
 			text-align: center;
 			margin : 150px auto 0 auto;
-			width: 370px;
+			width: 90%;
 			display: inherit;
 		}
 
@@ -128,7 +128,11 @@ html, body {
 		}
 	}
 
-
+	@media only screen and (max-width: 760px) {
+		.homeTitle{
+			font-size: 60px !important;
+		}
+	}
 
 
 	.homeText{
