--- a/app/views/layouts/_supplierheader.html.erb
+++ b/app/views/layouts/_supplierheader.html.erb
@@ -1,4 +1,28 @@
+<!-- <div class='center fatfaceheader'>
+      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
+</div> -->
 
-<div class='center fatfaceheader'>
+<div id="scroller-anchor"></div> 
+<div class='center fatfaceheader' id="scroller" style="width: 100%"> 
       <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
 </div>
+
+<div id="scroller-anchor2"></div> 
+<div class='center fatfaceheader' id="scroller2" style="width: 100%"> 
+      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
+</div>
+
+<!--   <div id="scroller-anchor"></div> 
+  <div id="scroller"> 
+    Scroller Scroller Scroller
+  </div> -->
+
+
+<script type="text/javascript"> 
+  $(function() {
+    moveScroller();
+  });
+
+
+
+</script> 
