--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,11 +7,12 @@
 		<div>Welcome to the FatFace Early Settlement Portal, managed by Invoice<span style="color: #72B74C">ly</span>.</div>
 		<br>
 		
-		<div>Invoice<span style="color: #72B74C">ly</span> removes the inefficient and time-consuming process of agreeing discounts between buyers and suppliers. Our technology simplifies the communication and offer/acceptance process - you can agree an accelerated payment in just a few clicks.</div>
+		<div>Invoice<span style="color: #72B74C">ly</span> removes the inefficient and time-consuming process of agreeing discounts between buyers and suppliers. Our technology simplifies the communication and offer acceptance process - you can agree an accelerated payment in just a few clicks.</div>
 		<br>
 		<div>All offers that you receive via email and within the portal are sent by Invoice<span style="color: #72B74C">ly</span> on behalf of FatFace. You do not need to confirm with FatFace that these offers are valid. Simply click Accept next to the relevant invoices and FatFace will receive updated payment information. Invoice<span style="color: #72B74C">ly</span> will also send you confirmation by email of all payments agreed through the platform.</div>
 		<br>
 		<div>This portal is designed to be straightforward. If you have any questions, however, please check our FAQ page or email our customer service team at <%= mail_to 'hello@invoicely.co.uk' do %>hello@invoicely.co.uk<% end %>. Additionally, if your company has a large supply chain and could benefit from our technology, we would love to hear from you.</div>
 	</div>
+	<br><br><br><br><br><br><br><br>
 </div>
 
