--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -18,7 +18,7 @@
 
   <% if @pinsaccepted.first %>
   <p><b>Accepted</b></p>
-  <p>You have accepted early payment offers on the below invoice(s):</p>
+  <p>You have accepted early payment on the below invoice(s):</p>
   <table class="table table-hover table-bordered table-striped invtable">
     <thead>
       <tr>
