--- a/app/views/layouts/_supplierheader.html.erb
+++ b/app/views/layouts/_supplierheader.html.erb
@@ -1,28 +1,18 @@
 <!-- <div class='center fatfaceheader'>
-      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
+      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "Fat Face") %>
 </div> -->
 
 <div id="scroller-anchor"></div> 
-<div class='center fatfaceheader' id="scroller" style="width: 100%"> 
-      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
+<div class='center fatfaceheader' id="scroller"> 
+      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "Fat Face") %>
 </div>
 
-<div id="scroller-anchor2"></div> 
-<div class='center fatfaceheader' id="scroller2" style="width: 100%"> 
-      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "FatFace") %>
+<div class='center placeholder' id="scroller2" style="height: 120px; width: 100%; position: relative;">       
 </div>
-
-<!--   <div id="scroller-anchor"></div> 
-  <div id="scroller"> 
-    Scroller Scroller Scroller
-  </div> -->
 
 
 <script type="text/javascript"> 
   $(function() {
     moveScroller();
   });
-
-
-
 </script> 
