--- a/app/views/layouts/_supplierheader.html.erb
+++ b/app/views/layouts/_supplierheader.html.erb
@@ -2,9 +2,9 @@
       <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "Fat Face") %>
 </div> -->
 
-<div id="scroller-anchor"></div> 
-<div class='center fatfaceheader' id="scroller"> 
-      <span class="logohelper"></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "Fat Face") %>
+<div id="scroller-anchor"></div>
+<div class='center fatfaceheader' id="scroller">
+      <span class="logohelper"><a name="top"></a></span><%= image_tag("FFLogo.png", :id => 'fflogo', :alt => "Fat Face") %>
 </div>
 
 <div class='center placeholder' id="scroller2" style="height: 120px; width: 100%; position: relative;">       
